--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
                     <input class="dis" type="text" name="display" readonly>
                 </div>
                 <div>
+                    <input type="button" value="7">
+                    <input type="button" value="8">
+                    <input type="button" value="9">
+                    <input type="button" value="DEL">
+                </div>
+                <div>
                     <input type="button" value="4">
                     <input type="button" value="5">
                     <input type="button" value="6">
